[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://Images/heart.png" type="Texture" id=2]
[ext_resource path="res://Images/activeHeart.png" type="Texture" id=3]
[ext_resource path="res://Images/Star.png" type="Texture" id=4]
[ext_resource path="res://Images/ActiveStar.png" type="Texture" id=5]
[ext_resource path="res://Images/shield-standby_32x32-export.png" type="Texture" id=6]
[ext_resource path="res://Images/m5x7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Images/swordHud.png" type="Texture" id=8]
[ext_resource path="res://Images/Target.png" type="Texture" id=9]
[ext_resource path="res://Images/Speed.png" type="Texture" id=10]
[ext_resource path="res://Images/HpRegen.png" type="Texture" id=11]
[ext_resource path="res://Images/EnergyRegen.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="HealthUI" type="Control"]
margin_left = 1.0
margin_right = 21.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="StarUIEmpty" type="TextureRect" parent="."]
margin_top = 20.0
margin_right = 32.0
margin_bottom = 52.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="StarUIFull" type="TextureRect" parent="."]
margin_top = 20.0
margin_right = 32.0
margin_bottom = 52.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 8, 158 )
scale = Vector2( 0.625, 0.5625 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Sprite3"]
margin_left = 24.0
margin_top = -23.1111
margin_right = 47.0
margin_bottom = 24.8889
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 9, 97 )
scale = Vector2( 0.84375, 0.75 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Sprite4"]
margin_left = 16.5926
margin_top = -17.3333
margin_right = 32.5926
margin_bottom = 14.6667
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 9, 53 )
scale = Vector2( 0.8125, 0.765625 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Sprite5"]
margin_left = 17.2308
margin_top = -15.6735
margin_right = 33.2308
margin_bottom = 16.3265
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 9, 74 )
scale = Vector2( 0.8125, 0.765625 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Sprite6"]
margin_left = 17.2308
margin_top = -13.0612
margin_right = 33.2308
margin_bottom = 18.9388
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 7, 137 )
scale = Vector2( 0.625, 0.5625 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sprite2"]
margin_left = 25.6
margin_top = -23.1111
margin_right = 48.6
margin_bottom = 24.8889
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 7, 117 )
scale = Vector2( 0.625, 0.5625 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = 25.6
margin_top = -21.3333
margin_right = 48.6
margin_bottom = 26.6667
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 1 )
text = "0"
